pullrequest/bitbucket/11.eventlistener-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  name: el-pull-request-pipeline
  namespace: ci
spec:
  host: el-pull-request-pipeline-ci.apps.cluster-64dzg.dynamic.redhatworkshops.io
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-pull-request-pipeline-eventlistener
    weight: 100
  wildcardPolicy: None
status:
  ingress:
  - conditions:
    - lastTransitionTime: "2024-06-06T12:29:01Z"
      status: "True"
      type: Admitted
    host: el-pull-request-pipeline-ci.apps.cluster-64dzg.dynamic.redhatworkshops.io
    routerCanonicalHostname: router-default.apps.cluster-64dzg.dynamic.redhatworkshops.io
    routerName: default
    wildcardPolicy: None
